--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 /* Style The Dropdown Button */
+.exchange-box{
+    border: 1px solid black;
+    width: 400px;
+}
+
+
 .dropbtn {
     background-color: #4CAF50;
     color: white;
