--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
+    width: 100%;
   }
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
+    width: 100%;
   }
   
   /* Dropdown Content (Hidden by Default) */
@@ -49,4 +51,13 @@
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
     background-color: #3e8e41;
+  }
+
+  .input-area{
+    width: 100%;
+  }
+
+  .input-area input{
+    width: 100%;
+    box-sizing: border-box;
   }
